# pcl_demo

./: CMakeLists.txt  akit_perception.cpp  cloud.pcd  correspondence_grouping.cpp  demo.cpp  demo.cpp.autosave  demo2.cpp  demo3.cpp  demo3backup.cpp  demo4.cpp  detection_with_opencv.cpp  icosahedron_divide.cpp  ipa_akit_detection.cpp  ipa_akit_detection.h  ipa_akit_detection_commons.h  local_pipeline.cpp  model_training.cpp  package.xml  partial_views_creator.cpp  particlefilter.cpp  pass_through.cpp  pcd_write.cpp  prototype_with_viewer.cpp  robust_pose.cpp
config/: ipa_akit_detection_config.yaml
include/ipa_pcl_demo/: demo3.h
src/: demo3.cpp  demo3backup2.cpp  demo3main.cpp
